--- a/Low_freq_otg_app/app/src/main/AndroidManifest.xml
+++ b/Low_freq_otg_app/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
 
         <activity android:name=".WelcomeActivity"
             android:screenOrientation="portrait"
+            android:exported="true"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
